--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-2018 Robot Project/.vs/
-2018 Robot Project/build/
-2018 Robot Project/.gradle/
-2018 Robot Project/build/
-2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
-2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/obj/
-2018 Robot Project/Dashboard/2018 Main Dashboard/.vs
+Robot Project/.vs/
+Robot Project/build/
+Robot Project/.gradle/
+Robot Project/build/
+Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
+Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/obj/
+Robot Project/Dashboard/2018 Main Dashboard/.vs
 DataMonitor/.vs/DataMonitor/v15/Server/sqlite3/db.lock
 DataMonitor/DataMonitor/bin/
 DataMonitor/DataMonitor/obj/
 DataMonitor/.vs/DataMonitor/v15/Server/sqlite3/
+.vs/
