relocate power reporting task

--- a/Robot Project/frcUserProgramExe.vcxproj
+++ b/Robot Project/frcUserProgramExe.vcxproj
@@ -40,11 +40,11 @@
     <ClCompile Include="src\cpp\maxutils\MaxAutonomous.cpp" />
     <ClCompile Include="src\cpp\maxutils\MaxDataStream.cpp" />
     <ClCompile Include="src\cpp\maxutils\MaxTask.cpp" />
+    <ClCompile Include="src\cpp\maxutils\PowerReportingTask.cpp" />
     <ClCompile Include="src\cpp\osc\OscOutboundPacketStream.cpp" />
     <ClCompile Include="src\cpp\osc\OscPrintReceivedElements.cpp" />
     <ClCompile Include="src\cpp\osc\OscReceivedElements.cpp" />
     <ClCompile Include="src\cpp\osc\OscTypes.cpp" />
-    <ClCompile Include="src\cpp\PowerReportingTask.cpp" />
     <ClCompile Include="src\cpp\Robot.cpp" />
     <ClCompile Include="src\cpp\SampleAutonomous.cpp" />
     <ClCompile Include="src\cpp\SampleTask.cpp" />
@@ -61,6 +61,7 @@
     <ClInclude Include="src\include\maxutils\MaxDataStream.h" />
     <ClInclude Include="src\include\maxutils\MaxDefs.h" />
     <ClInclude Include="src\include\maxutils\MaxTask.h" />
+    <ClInclude Include="src\include\maxutils\PowerReportingTask.h" />
     <ClInclude Include="src\include\osc\MessageMappingOscPacketListener.h" />
     <ClInclude Include="src\include\osc\OscException.h" />
     <ClInclude Include="src\include\osc\OscHostEndianness.h" />
@@ -69,7 +70,6 @@
     <ClInclude Include="src\include\osc\OscPrintReceivedElements.h" />
     <ClInclude Include="src\include\osc\OscReceivedElements.h" />
     <ClInclude Include="src\include\osc\OscTypes.h" />
-    <ClInclude Include="src\include\PowerReportingTask.h" />
     <ClInclude Include="src\include\Robot.h" />
     <ClInclude Include="src\include\SampleAutonomous.h" />
     <ClInclude Include="src\include\SampleTask.h" />
