--- a/Robot Project/frcUserProgramExe.vcxproj
+++ b/Robot Project/frcUserProgramExe.vcxproj
@@ -37,10 +37,10 @@
     <ClCompile Include="src\cpp\ip\IpEndpointName.cpp" />
     <ClCompile Include="src\cpp\ip\NetworkingUtils.cpp" />
     <ClCompile Include="src\cpp\ip\UdpSocket.cpp" />
-    <ClCompile Include="src\cpp\maxutils\MaxAutonomous.cpp" />
-    <ClCompile Include="src\cpp\maxutils\MaxDataStream.cpp" />
-    <ClCompile Include="src\cpp\maxutils\MaxTask.cpp" />
-    <ClCompile Include="src\cpp\maxutils\PowerReportingTask.cpp" />
+    <ClCompile Include="src\cpp\maxutils\RobotAutonomous.cpp" />
+    <ClCompile Include="src\cpp\maxutils\RobotDataStream.cpp" />
+    <ClCompile Include="src\cpp\maxutils\RobotTask.cpp" />
+    <ClCompile Include="src\cpp\maxutils\RobotReportingTask.cpp" />
     <ClCompile Include="src\cpp\osc\OscOutboundPacketStream.cpp" />
     <ClCompile Include="src\cpp\osc\OscPrintReceivedElements.cpp" />
     <ClCompile Include="src\cpp\osc\OscReceivedElements.cpp" />
@@ -56,11 +56,11 @@
     <ClInclude Include="src\include\ip\PacketListener.h" />
     <ClInclude Include="src\include\ip\TimerListener.h" />
     <ClInclude Include="src\include\ip\UdpSocket.h" />
-    <ClInclude Include="src\include\maxutils\MaxAutonomous.h" />
-    <ClInclude Include="src\include\maxutils\MaxControls.h" />
-    <ClInclude Include="src\include\maxutils\MaxDataStream.h" />
-    <ClInclude Include="src\include\maxutils\MaxDefs.h" />
-    <ClInclude Include="src\include\maxutils\MaxTask.h" />
+    <ClInclude Include="src\include\maxutils\RobotAutonomous.h" />
+    <ClInclude Include="src\include\maxutils\RobotControls.h" />
+    <ClInclude Include="src\include\maxutils\RobotDataStream.h" />
+    <ClInclude Include="src\include\maxutils\RobotDefs.h" />
+    <ClInclude Include="src\include\maxutils\RobotTask.h" />
     <ClInclude Include="src\include\maxutils\PowerReportingTask.h" />
     <ClInclude Include="src\include\osc\MessageMappingOscPacketListener.h" />
     <ClInclude Include="src\include\osc\OscException.h" />
