--- a/Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/Robot Project/frcUserProgramExe.vcxproj.filters
@@ -22,11 +22,11 @@
     <Filter Include="Source Files\osc">
       <UniqueIdentifier>{d8aaf258-1146-4120-967d-ab9b8e0365a0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\maxutils">
-      <UniqueIdentifier>{755381a5-ba96-4355-905e-33cac5f15dd9}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\maxutils">
       <UniqueIdentifier>{392a40b5-b39f-4633-9d27-de053a72a543}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Robotutils">
+      <UniqueIdentifier>{755381a5-ba96-4355-905e-33cac5f15dd9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup Label="Sources">
@@ -60,22 +60,22 @@
     <ClCompile Include="src\cpp\SampleTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\cpp\maxutils\MaxDataStream.cpp">
-      <Filter>Source Files\maxutils</Filter>
-    </ClCompile>
-    <ClCompile Include="src\cpp\maxutils\MaxTask.cpp">
-      <Filter>Source Files\maxutils</Filter>
-    </ClCompile>
     <ClCompile Include="src\cpp\ControlTask.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\cpp\maxutils\MaxAutonomous.cpp">
-      <Filter>Source Files\maxutils</Filter>
     </ClCompile>
     <ClCompile Include="src\cpp\SampleAutonomous.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\cpp\maxutils\PowerReportingTask.cpp">
+    <ClCompile Include="src\cpp\maxutils\RobotAutonomous.cpp">
+      <Filter>Source Files\maxutils</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cpp\maxutils\RobotDataStream.cpp">
+      <Filter>Source Files\maxutils</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cpp\maxutils\RobotTask.cpp">
+      <Filter>Source Files\maxutils</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cpp\maxutils\RobotReportingTask.cpp">
       <Filter>Source Files\maxutils</Filter>
     </ClCompile>
   </ItemGroup>
@@ -125,29 +125,29 @@
     <ClInclude Include="src\include\SampleTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\include\maxutils\MaxDataStream.h">
-      <Filter>Header Files\maxutils</Filter>
-    </ClInclude>
-    <ClInclude Include="src\include\maxutils\MaxDefs.h">
-      <Filter>Header Files\maxutils</Filter>
-    </ClInclude>
-    <ClInclude Include="src\include\maxutils\MaxTask.h">
-      <Filter>Header Files\maxutils</Filter>
-    </ClInclude>
-    <ClInclude Include="src\include\maxutils\MaxControls.h">
-      <Filter>Header Files\maxutils</Filter>
-    </ClInclude>
     <ClInclude Include="src\include\ControlTask.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\include\maxutils\MaxAutonomous.h">
-      <Filter>Header Files\maxutils</Filter>
     </ClInclude>
     <ClInclude Include="src\include\SampleAutonomous.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\maxutils\PowerReportingTask.h">
-      <Filter>Header Files\maxutils</Filter>
+      <Filter>Header Files\Robotutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\RobotAutonomous.h">
+      <Filter>Header Files\Robotutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\RobotControls.h">
+      <Filter>Header Files\Robotutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\RobotDataStream.h">
+      <Filter>Header Files\Robotutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\RobotDefs.h">
+      <Filter>Header Files\Robotutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\RobotTask.h">
+      <Filter>Header Files\Robotutils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
