--- a/Robot/WindowsRobot.vcxproj
+++ b/Robot/WindowsRobot.vcxproj
@@ -173,11 +173,13 @@
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotDataStream.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotDefs.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotTask.h" />
+    <ClInclude Include="TargetRobot\src\include\SampleActions\CounterAction.h" />
     <ClInclude Include="TargetRobot\src\include\SampleActions\PrintAction.h" />
     <ClInclude Include="TargetRobot\src\include\SampleActions\TimeoutPrintAction.h" />
     <ClInclude Include="TargetRobot\src\include\SampleAutonomous.h" />
     <ClInclude Include="TargetRobot\src\include\SampleTask.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TargetRobot\src\include\ParallelCounterSampleTask.h" />
     <ClInclude Include="WindowsRobot\include\FRCWindowsRobot.h" />
   </ItemGroup>
   <ItemGroup>
@@ -211,10 +213,12 @@
     <ClCompile Include="TargetRobot\src\cpp\robotlib\RobotTask.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TargetRobot\src\cpp\SampleActions\CounterAction.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleActions\PrintAction.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleActions\TimeoutPrintAction.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleAutonomous.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleTask.cpp" />
+    <ClCompile Include="TargetRobot\src\cpp\ParallelCounterSampleTask.cpp" />
     <ClCompile Include="WindowsRobot.cpp" />
     <ClCompile Include="WindowsRobot\cpp\FRCWindowsRobot.cpp" />
     <ClCompile Include="WindowsRobot\cpp\ip\NetworkingUtils.cpp" />
