--- a/Robot/WindowsRobot.vcxproj
+++ b/Robot/WindowsRobot.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TargetRobot\src\include\Robot.h" />
     <ClInclude Include="TargetRobot\src\include\RobotControl.h" />
+    <ClInclude Include="TargetRobot\src\include\robotlib\BaseDataStoreTypes.h" />
+    <ClInclude Include="TargetRobot\src\include\robotlib\DataStore.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\ip\IpEndpointName.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\ip\NetworkingUtils.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\ip\PacketListener.h" />
@@ -188,6 +190,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TargetRobot\src\cpp\Robot.cpp" />
+    <ClCompile Include="TargetRobot\src\cpp\robotlib\BaseDataStoreTypes.cpp" />
+    <ClCompile Include="TargetRobot\src\cpp\robotlib\DataStore.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\robotlib\ip\IpEndpointName.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
