--- a/Robot/WindowsRobot.vcxproj
+++ b/Robot/WindowsRobot.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TargetRobot\src\include\Robot.h" />
     <ClInclude Include="TargetRobot\src\include\RobotControl.h" />
+    <ClInclude Include="TargetRobot\src\include\RobotLibConfig.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\BaseDataStoreTypes.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\DataStore.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\ip\IpEndpointName.h" />
