Continued task metrics implementation

--- a/Robot/WindowsRobot.vcxproj.filters
+++ b/Robot/WindowsRobot.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="TargetRobot\src\include\RobotLibConfig.h">
       <Filter>Header Files\TargetRobot</Filter>
     </ClInclude>
+    <ClInclude Include="TargetRobot\src\include\robotlib\TaskMetricsTask.h">
+      <Filter>Header Files\TargetRobot\robotlib</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -219,6 +222,9 @@
       <Filter>Source Files\TargetRobot\robotlib</Filter>
     </ClCompile>
     <ClCompile Include="TargetRobot\src\cpp\robotlib\BaseDataStoreTypes.cpp">
+      <Filter>Source Files\TargetRobot\robotlib</Filter>
+    </ClCompile>
+    <ClCompile Include="TargetRobot\src\cpp\robotlib\TaskMetricsTask.cpp">
       <Filter>Source Files\TargetRobot\robotlib</Filter>
     </ClCompile>
   </ItemGroup>
