--- a/Robot/WindowsRobot.vcxproj
+++ b/Robot/WindowsRobot.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotDataStream.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotDefs.h" />
     <ClInclude Include="TargetRobot\src\include\robotlib\RobotTask.h" />
+    <ClInclude Include="TargetRobot\src\include\robotlib\TaskMetricsTask.h" />
     <ClInclude Include="TargetRobot\src\include\SampleActions\CounterAction.h" />
     <ClInclude Include="TargetRobot\src\include\SampleActions\PrintAction.h" />
     <ClInclude Include="TargetRobot\src\include\SampleActions\TimeoutPrintAction.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="TargetRobot\src\cpp\robotlib\RobotTask.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TargetRobot\src\cpp\robotlib\TaskMetricsTask.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleActions\CounterAction.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleActions\PrintAction.cpp" />
     <ClCompile Include="TargetRobot\src\cpp\SampleActions\TimeoutPrintAction.cpp" />
